<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity"
    android:fitsSystemWindows="true">

    <ImageButton
        android:background="@drawable/ic_chevron_left_black_24dp"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_margin="2dp"/>

    <ImageView
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/tv_app_name"
        android:src="@drawable/logo"/>

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:layout_above="@id/account"
        android:textSize="18sp"
        android:layout_marginBottom="32dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/account"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_above="@id/password"
        android:layout_marginBottom="8dp"
        android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:hint="@string/phone_number"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_centerInParent="true"
        android:hint="@string/password"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/login"
        android:textColor="@color/ColorWhite"
        android:enabled="false"
        android:background="@drawable/button_login"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:padding="12dp"
            android:textColor="@color/colorOrange"
            android:background="@color/transparent"
            android:text="@string/register"/>

        <View
            android:layout_gravity="center"
            android:layout_width="1dp"
            android:layout_margin="2dp"
            android:layout_height="16dp"
            android:background="@color/colorGray"/>

        <TextView
            android:id="@+id/tv_login_problem"
            android:padding="12dp"
            android:layout_width="wrap_content"
            android:text="@string/login_problem"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>